--- a/client/.env
+++ b/client/.env
@@ -3,3 +3,7 @@
 VITE_CURRENCY = '$'
 
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_bmF0dXJhbC1ndWxsLTc3LmNsZXJrLmFjY291bnRzLmRldiQ
+
+VITE_BASE_URL = http://localhost:3000
+
+VITE_TMDB_IMAGE_BASE_URL = https://image.tmdb.org/t/p/original
