--- a/client/.env
+++ b/client/.env
@@ -4,6 +4,7 @@ VITE_CURRENCY = '$'
 
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_cXVpZXQtc3RhcmxpbmctOTEuY2xlcmsuYWNjb3VudHMuZGV2JA
 
-VITE_BASE_URL = http://localhost:3000
+#VITE_BASE_URL = http://localhost:3000
+VITE_BASE_URL = https://quickshow-server-delta.vercel.app
 
 VITE_TMDB_IMAGE_BASE_URL = https://image.tmdb.org/t/p/original
